--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,9 @@
 server.port=8000
 server.tomcat.max-threads=800
 server.tomcat.uri-encoding=UTF-8
-
-
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Asia/Shanghai
-spring.jackson.default-property-inclusion= non_null
-
+spring.jackson.default-property-inclusion=non_null
 #redis configuration
 spring.redis.hostName=127.0.0.1
 spring.redis.port=6379
@@ -17,15 +14,12 @@ spring.redis.pool.maxWait=-1
 spring.redis.pool.maxIdle=8
 spring.redis.pool.minIdle=0
 spring.redis.timeout=0
-
 #database configuration
-spring.datasource.url = jdbc:oracle:thin:@localhost:32769:XE
+spring.datasource.url=jdbc:oracle:thin:@localhost:32769:XE
 spring.datasource.username=exchanger
 spring.datasource.password=password
-spring.datasource.driverClassName =  oracle.jdbc.driver.OracleDriver
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.show-sql = true
-
-
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.show-sql=true
 #customization configuration
 redis.keysplitter=:
