修改新闻返回模型

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.show-sql=true
 #customization configuration
 redis.keysplitter=:
+#system format configuration
+system.format.date_format=yyyy-MM-dd HH:mm:ss
